fix github button alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -116,17 +116,9 @@ header {
   SOCIALS
 
 *****************************************/
-
-.svg-inline--fa.fa-github.fa-w-16 {
-  color: white;
-  padding: 20px;
-  border-radius: 50%;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
 .fa-github {
   background: black;
+  margin-left: 10px;
 }
 
 .fa-github:hover {
